--- a/src/forms/menu.form
+++ b/src/forms/menu.form
@@ -37,7 +37,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vsetky testy uskutocenych za zadane obdobie vo vybranom pracovisku"/>
+          <text value="Vsetky testy uskutocnene za zadane obdobie vo vybranom pracovisku"/>
         </properties>
       </component>
       <component id="6d2e0" class="javax.swing.JButton" binding="Button17">
