--- a/src/forms/menu.form
+++ b/src/forms/menu.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.menu">
   <grid id="27dc6" binding="MenuPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vloz PCR test"/>
+          <text value="1. Vloz PCR test"/>
         </properties>
       </component>
       <component id="b3225" class="javax.swing.JButton" binding="Button2">
@@ -21,7 +21,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vyhladaj vysledok pre pacienta"/>
+          <text value="2. Vyhladaj vysledok pre pacienta"/>
         </properties>
       </component>
       <component id="95ee" class="javax.swing.JButton" binding="Button4">
@@ -29,7 +29,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vypis pozitivnych testov za zadane obdobie pre okres"/>
+          <text value="4. Vypis pozitivnych testov za zadane obdobie pre okres"/>
         </properties>
       </component>
       <component id="555aa" class="javax.swing.JButton" binding="Button15">
@@ -37,7 +37,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vsetky testy uskutocnene za zadane obdobie vo vybranom pracovisku"/>
+          <text value="15. Vsetky testy uskutocnene za zadane obdobie vo vybranom pracovisku"/>
         </properties>
       </component>
       <component id="6d2e0" class="javax.swing.JButton" binding="Button17">
@@ -45,7 +45,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vloz osobu"/>
+          <text value="17. Vloz osobu"/>
         </properties>
       </component>
     </children>
