--- a/src/forms/RegionsOrderedBySickPeople_14.form
+++ b/src/forms/RegionsOrderedBySickPeople_14.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.SearchSickInAllRegions_12">
-  <grid id="27dc6" binding="searchSickInAllRegionsPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="forms.RegionsOrderedBySickPeople_14">
+  <grid id="27dc6" binding="regionsOrderedBySickPeoplePanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="560" height="400"/>
+      <xy x="20" y="20" width="550" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="c14df" class="javax.swing.JTextField" binding="numberOfDaysTextField">
+      <component id="e7562" class="javax.swing.JTextField" binding="numberOfDaysTextField">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -16,23 +16,23 @@
         </constraints>
         <properties/>
       </component>
-      <component id="7533" class="javax.swing.JButton" binding="searchPeopleButton">
+      <component id="7459b" class="javax.swing.JButton" binding="listRegionsButton">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vyhladaj osoby"/>
+          <text value="Zorad kraje"/>
         </properties>
       </component>
-      <component id="30c59" class="javax.swing.JLabel">
+      <component id="d183" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Vypis chorych osob"/>
+          <text value="Vypis krajov zoradenych podla poctu chorych osob pre dany datum"/>
         </properties>
       </component>
-      <component id="43ab9" class="javax.swing.JLabel">
+      <component id="bd09" class="javax.swing.JLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -40,15 +40,15 @@
           <text value="Pocet dni"/>
         </properties>
       </component>
-      <component id="65edf" class="javax.swing.JLabel">
+      <component id="e94a7" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Kolko dni od pozitivneho testu je osoba povazovana za choru"/>
         </properties>
       </component>
-      <component id="b8808" class="javax.swing.JTextField" binding="dayTextField">
+      <component id="915e1" class="javax.swing.JTextField" binding="dayTextField">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -56,7 +56,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="3a3fb" class="javax.swing.JTextField" binding="monthTextField">
+      <component id="ca7c9" class="javax.swing.JTextField" binding="monthTextField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -64,7 +64,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f86ce" class="javax.swing.JTextField" binding="yearTextField">
+      <component id="2fd3a" class="javax.swing.JTextField" binding="yearTextField">
         <constraints>
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -72,7 +72,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="5e424" class="javax.swing.JLabel">
+      <component id="7143b" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -80,7 +80,7 @@
           <text value="Datum"/>
         </properties>
       </component>
-      <component id="23784" class="javax.swing.JLabel">
+      <component id="96eee" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -88,7 +88,7 @@
           <text value="Den"/>
         </properties>
       </component>
-      <component id="d560c" class="javax.swing.JLabel">
+      <component id="3d833" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -96,7 +96,7 @@
           <text value="Mesiac"/>
         </properties>
       </component>
-      <component id="c4367" class="javax.swing.JLabel">
+      <component id="42ca" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -104,7 +104,7 @@
           <text value="Rok"/>
         </properties>
       </component>
-      <component id="6f7eb" class="javax.swing.JButton" binding="goBackToMenuButton">
+      <component id="13f17" class="javax.swing.JButton" binding="goBackToMenuButton">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
